--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "img-capicua",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,7 @@
   "dependencies": {
     "form-data": "^4.0.2",
     "node-fetch": "^2.7.0",
-    "streamifier": "^0.1.1"
+    "react-native": "^0.78.0",
+    "react-native-uuid": "^2.0.3"
   }
 }
