--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "img-capicua",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,6 @@
     "form-data": "^3.0.3",
     "node-fetch": "^2.7.0",
     "react-native": "^0.78.0",
-    "react-native-uuid": "^2.0.3"
+    "uuid": "^11.1.0"
   }
 }
